GDB-14220 fix dark mode visual graph
## What
Fix dark mode visual graph node colors.

## Why
The node colors were too bright and the text inside them wasn't visible

## How
- Updated the color interpolation logic to use `interpolateRgbBasis` since CSS variables resolve to hex, and we can't interpolate a hue of a hex color.
- Removed hardcoded color values and replaced them with CSS variables.
- Adjusted the color retrieval logic to ensure distinct colors for graph nodes.

## Testing
n/a

--- a/packages/legacy-workbench/src/css/graphs-vizualizations.css
+++ b/packages/legacy-workbench/src/css/graphs-vizualizations.css
@@ -3,7 +3,6 @@
 }
 
 .node {
-    stroke: #fff;
     stroke-width: 1.5px;
     opacity: 1;
 }
